--- a/app/components/Login/Login.module.css
+++ b/app/components/Login/Login.module.css
@@ -9,9 +9,52 @@
   width: 80px;
 }
 .loginCont{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin-top: 15px;
-  width: 400px;
-  height: 300px;
+  width: 80vw;
+  max-width: 500px;
   border: 1px solid white;
-  color: white
+  color: white;
+  padding-bottom: 30px;
+}
+.btns{
+  width: 100%;
+  max-width: 80%;
+  padding: 10px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
+}
+.btnCont,
+.formCont button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  width: 100%;
+  /* max-width: 80%; */
+  padding: 10px 30px;
+  cursor: pointer;
+}
+.formCont{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 80%;
+  gap: 10px;
+  padding: 0 10px;
+}
+.formCont input{
+  padding: 10px 10px;
+}
+.formCont button{
+  max-width: 100%;
+}
+.text a{
+  color: white;
 }
