--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,6 @@ body{
   height: 100%;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 html{
   background: #2e0e06;
@@ -25,11 +24,12 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  color: white;
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
