--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@ body{
   padding: 0;
 }
 html{
-  background: #2e0e06;
+  background: #bfbfbf;
   /* border: 1px solid white; */
 }
 
@@ -24,7 +24,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  color: white;
+  color: black;
 }
 
 *,
@@ -33,3 +33,8 @@ body {
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 768px) {
+  body{
+    padding: 0 5px;
+  }
+}
