--- a/app/components/Modal/Modal.module.css
+++ b/app/components/Modal/Modal.module.css
@@ -21,6 +21,13 @@
   height: 40vh;
   background-color: rgb(255, 255, 255);
   border-radius: 5px;
+  display: flex; /* Use flexbox for centering */
+  flex-direction: column; /* Stack children vertically */
+  justify-content: center; /* Center vertically */
+  align-items: center; /* Center horizontally */
+  padding: 20px; /* Add some padding */
+  overflow-y: auto; /* Enable scrolling if content overflows */
+  /* color: blue; */
 }
 
 .closeBtn{
@@ -33,23 +40,10 @@
     background-color: transparent;
     z-index: 10000;
     border: none;
+    border: 1px solid green;
   }
-.wrapper{
-  position: fixed;
-  max-height: 80vh;
-  width: 100%;
-  max-width: 570px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 5px;
-  z-index: 1000;
-  /* overflow-y: auto; */
-}
+
 .modalContent{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  row-gap: 10px;
   width: 100%;
   height: 100%;
 }
@@ -69,9 +63,21 @@
   z-index: 2000;
 }
 .modalContent div{
-  width: 170px;
-  height: 170px;
+  /* width: 170px;
+  height: 170px; */
   cursor: pointer;
+}
+.modalContent div > div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  height: 100%;
+}
+.modalContent div > div button{
+  padding: 10px 15px;
+  
 }
 .modalContent p{
   font-size: 1.3rem;
@@ -102,31 +108,7 @@
   .modal{
     width: 95%;
     max-width: 420px;
+    padding: 5px;
   }
-  .wrapper{
-    width: 95%;
-    max-width: 350px;
-    padding: 0 8px;
-  }
-  .modalContent{
-    max-width: 320px;
-  }
-  .title{
-    margin-bottom: 0px;
-    font-size: 3rem;
-  }
-  .modalContent div{
-    width:100px;
-    height:100px;
-  }
-  .modal img{
-    width:100px;
-    height:100px;
-    border-radius: 5px;
-    margin-right: 5px;
-  }
-  .modalContent p{
-    max-width: 300px;
-    font-size: 1.1rem;
-  }
+
 }
