--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,8 @@ body{
   padding: 0;
 }
 html{
-  background: #bfbfbf;
+  /* background: #bfbfbf; */
+  background: #ffffff;
   /* border: 1px solid white; */
 }
 
@@ -21,7 +22,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  color: black;
+  color: #1f2937;
 }
 
 *,
