--- a/app/components/CreateQRCode/CreateQRCode.module.css
+++ b/app/components/CreateQRCode/CreateQRCode.module.css
@@ -1,7 +1,6 @@
 .cont{
-  border: 1px solid green;
+  /* border: 1px solid green; */
   margin: 50px 0;
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
