--- a/app/components/OrdersPage/orders.module.css
+++ b/app/components/OrdersPage/orders.module.css
@@ -1,3 +1,16 @@
+.cont{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.cont h1{
+  text-align: center;
+  color: rgb(54, 54, 54);
+}
+.cont h2{
+  text-align: center;
+  color: rgb(54, 54, 54);
+}
 .headerRow{
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
@@ -6,38 +19,47 @@
   margin-bottom: 10px;
 }
 .wrapper{
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   display: flex;
   justify-content: center;
-  max-height: 400px;
   overflow-y: auto;
+  max-height: 470px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  margin: 0 5px;
+  padding: 20px 5px;
 }
 .unfilled{
+  /* border: 1px solid green; */
   width: 100%;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
-  /* border: 1px solid green; */
+  gap: 10px;
 }
+
 .filled{
   width: 100%;
   padding: 5px 5px;
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
+
 .orderBlock{
   display: grid;
   grid-template-columns: 1fr 2fr 1fr auto; /* Adjust based on content */
   align-items: center;
-  background-color: #f9f9f9;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+  /* background-color: #f5f5f5; */
+  border: 2px solid rgb(207, 207, 207);
+  border-radius: 5px;
   width: 100%;
   min-height: 137px;
   column-gap: 8px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
+}
+.unfilled > .order:last-of-type .orderBlock:last-child{
+  margin-bottom: 20px;
 }
 .orderBlock p{
   margin: 0;
@@ -70,12 +92,15 @@
   display: flex;
   font-weight: bold;
   justify-content: center;
+  padding: 5px 0;
 }
 .itemQuantity{
   display: flex;
   justify-content: center;
   text-align: center;
   flex-shrink: 1;
+  font-weight: bold;
+  font-size: 1.6rem;
 }
 .btnCont{
   display: flex;
@@ -116,3 +141,19 @@
   border-radius: 10px;
   border: 3px solid #e0e0e0; 
 }
+.linkCont{
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+/* .linkMenu{
+  text-decoration: none;
+  color: white;
+  background-color: black;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
+  width: 100px;
+} */
