--- a/app/components/Cardapio/Cardapio.module.css
+++ b/app/components/Cardapio/Cardapio.module.css
@@ -1,26 +1,27 @@
 .category{
-  background-color: #2563eb;
+  background-color: #272727;
   color: white;
-  padding: 5px 0;
+  padding: 8px 0;
   text-align: center;
   border-radius: 5px;
   margin: 30px 0;
 }
 .subCategory{
 
-  padding: 10px 0;
+  padding: 8px 0;
   text-align: center;
   border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
-  background-color: aliceblue;
+  background-color: rgb(180, 180, 180);
   border-radius: 5px;
   max-width: 60%;
   margin: 0 auto;
   margin-top: 60px;
   margin-bottom: 45px;
+  color: white;
 }
 .itemsCont:last-child{
   margin-bottom: 15px;
