--- a/app/globals.css
+++ b/app/globals.css
@@ -16,13 +16,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 1440px;
-  padding: 0 20px;
+  /* padding: 0 20px; */
   overflow-x: hidden;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  /* gap: 20px; */
   min-height: 100vh;
   color: #1f2937;
+
 }
 
 *,
@@ -44,7 +46,7 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-  body{
+  /* body{
     padding: 0 5px;
-  }
+  } */
 }
