--- a/app/components/Hero/Hero.module.css
+++ b/app/components/Hero/Hero.module.css
@@ -1,23 +1,34 @@
 .cont{
-  padding: 20px 10px;
+  padding: 80px;
   margin-top: 20px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
   /* border: 1px solid green; */
   gap: 15px;
+  margin: 0 auto;
+  max-width: 1140px;
+}
+.leftBlock{
+  /* border: 1px solid salmon; */
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 .title {
- padding-left: 10px;
- width: 80vw;
- border: 1px solid red;
- font-size: 2rem;
+ /* padding-left: 10px; */
+ /* border: 1px solid red; */
+ font-size: 2.8rem;
  font-weight: 700;
- line-height: 2.6rem; 
+ line-height: 3.5rem; 
+ max-width: 500px;
 }
 .cta{
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-top: 30px;
   /* border: 1px solid red; */
 }
 .cta button{
@@ -27,10 +38,11 @@
   color: white;
   font-size: 1.2rem;
   letter-spacing: 1px;
+  cursor: pointer;
 }
 .how{
   font-size: 1.1rem;
-  /* margin-left: 5px; */
+  margin-left: 25px;
 }
 .link{
   display: flex;
@@ -39,4 +51,34 @@
 }
 .link:hover{
   color: red;
+  cursor: pointer;
+}
+
+.imgCont{
+  /* margin-left: 50px; */
+  margin-top: 20px;
+}
+.img{
+  max-width: 400px;
+  height: 450px;
+  object-fit: cover;
+  border-radius: 15px;
+  border-top-left-radius: 30%;
+  border-bottom-left-radius: 30%;
+}
+
+@media screen and (max-width:768px) {
+  .cont{
+    padding: 30px 20px;
+  }
+  .imgCont{
+    margin-left: 0px;
+    margin-top: 0px;
+  }
+  .img{
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+    border-radius: 15px;
+  }
 }
