--- a/app/components/HowItWorks/Card/Card.module.css
+++ b/app/components/HowItWorks/Card/Card.module.css
@@ -1,7 +1,7 @@
 
 .card{
-  width: 300px;
-  height: 555px;
+  width: 340px;
+  /* height: 555px; */
   padding: 40px 40px 30px;
   display: flex;
   /* justify-content: space-between; */
@@ -17,6 +17,7 @@
 .descriptionCont{
   margin-top: 30px;
   margin-bottom: 10px;
+  height: 180px;
 
   .title{
     font-size: 1.5rem;
@@ -30,12 +31,13 @@
     line-height: 28px;
     font-weight: 400;
     font-size: 1.1rem;
+    margin: 0;
   }
 }
 
 .cta{
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   margin-top: 20px;
   line-height: 22px;
   gap: 5px;
