--- a/app/components/Hero/Hero.module.css
+++ b/app/components/Hero/Hero.module.css
@@ -81,4 +81,15 @@
     object-fit: cover;
     border-radius: 15px;
   }
+  .cta{
+    gap: 5px;
+  }
+  .cta button{
+    padding: 15px 20px;
+  }
+  .how{
+    font-size: 1.1rem;
+    margin-left: 15px;
+  }
+  
 }
