--- a/app/components/HowItWorks/Card/Card.module.css
+++ b/app/components/HowItWorks/Card/Card.module.css
@@ -1,7 +1,7 @@
 
 .card{
   width: 340px;
-  /* height: 555px; */
+  min-height: 500px;
   padding: 40px 40px 30px;
   display: flex;
   /* justify-content: space-between; */
@@ -12,7 +12,7 @@
   height: 150px;
   width: 140px;
   object-fit: fill;
-  /* box-shadow: 4px 3px 0px rgba(0, 0, 0, 1); */
+  box-shadow: 4px 3px 0px rgba(0, 0, 0, 1);
 }
 .descriptionCont{
   margin-top: 30px;
@@ -31,7 +31,7 @@
     line-height: 28px;
     font-weight: 400;
     font-size: 1.1rem;
-    margin: 0;
+    margin-top: 10px;
   }
 }
 
