--- a/app/components/Footer/Footer.module.css
+++ b/app/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   background-color: black;
   color: white;
-  margin-top: 100px;
+  /* margin-top: 100px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -94,9 +94,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .cont{
-    margin-top: 50px;
-  }
+
   .wrapper{
     flex-direction: column;
     gap: 20px;
