--- a/app/components/Login/Login.module.css
+++ b/app/components/Login/Login.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   flex-grow: 1;
   flex-direction: column;
+  margin-top: 100px;
 }
 .logo{
   width: 80px;
@@ -56,9 +57,11 @@
   max-width: 100%;
 }
 .text{
-  font-size: .8rem;
+  font-size: .9rem;
   width: 218px;
   margin: 0;
+  padding: 0 10px;
+  width: 80%;
 }
 .text p{
   color: black;
