--- a/app/components/Testimonials/Testimonials.module.css
+++ b/app/components/Testimonials/Testimonials.module.css
@@ -70,14 +70,16 @@
   .leftBlock{
     padding-left: 10px;
     max-width: 90%;
+    justify-content: center;
+    margin-top: 50px;
   }
   .rightBlock{
-    max-width: 90%;
+    max-width: 400px;
   }
 }
 @media screen and (max-width: 768px){
   .cont{
-    margin: 50px 10px;
+    margin: 50px 0px;
   }
   .wrapper{ 
     /* border: 1px solid green; */
@@ -92,7 +94,7 @@
     margin-top: 20px;
   }
   .rightBlock{
-    max-width: 600px;
+    max-width: 400px;
     margin: 20px 0;
   }
 }
