--- a/app/login/loginRoute.module.css
+++ b/app/login/loginRoute.module.css
@@ -1,9 +1,14 @@
 .content{
   display: flex;
   flex-direction: column;
+  height: 100%;
+  flex-grow: 1;
 }
 .body{
-  margin-bottom: 100px;
   /* border: 1px solid red; */
+  margin-bottom: 100px;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
